fix wrong font + added mui to home

--- a/frontend/src/Pages/Home/Home.css
+++ b/frontend/src/Pages/Home/Home.css
@@ -1,8 +1,4 @@
 
-.home {
-  width: 100%;  min-height: 74vh;
-}
-
 .projects {
   width: 100%;
   max-width: 1350px;
